# paddleocr-onnx

./: README.md  pyproject.toml
src/paddleocr_onnx/: __init__.py  pocr_onnx.py
src/paddleocr_onnx/ppocr/data/imaug/: operators.py
src/paddleocr_onnx/ppocr/postprocess/: __init__.py  ct_postprocess.py  db_postprocess.py  drrg_postprocess.py  east_postprocess.py  fce_postprocess.py  rec_postprocess.py  sast_postprocess.py  table_postprocess.py
src/paddleocr_onnx/ppocr/utils/: gen_label.py  logging.py  network.py  save_load.py  utility.py  visual.py
src/paddleocr_onnx/ppocr/utils/e2e_utils/: pgnet_pp_utils.py
src/paddleocr_onnx/tools/infer/: predict_cls.py  predict_det.py  predict_rec.py  predict_system.py  utility.py
