[project]
name = "paddleocr-onnx"
version = "0.1.0"
description = "PaddleOCR with ONNX"
authors = [
    { name = "0xNOY", email = "noy@abc-net.jp" }
]
dependencies = [
    "onnxruntime>=1.18.0",
    "opencv-python>=4.9.0.80",
    "numpy>=1.26.4",
    "pillow>=10.3.0",
    "shapely>=2.0.4",
    "pyclipper>=1.3.0.post5",
    "scikit-image>=0.23.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/paddleocr_onnx"]
